fixing priority icon layout for inclusive leadership & respectful engagement page on mobile

--- a/apsc-collab-css/partials/_layout.scss
+++ b/apsc-collab-css/partials/_layout.scss
@@ -376,6 +376,12 @@ h1 {
     }
 }
 
+#post-715 .priority-title-icon {
+    @media only screen and (max-width: $break-mobile) {
+        margin-bottom: 70px;
+    }
+}
+
 .show-mobile {
     display: none;
 
